--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hacker-news",
   "private": true,
-  "proxy": "https://hckrnews.com",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
+    "framer-motion": "^8.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
